--- a/index.html
+++ b/index.html
@@ -75,7 +75,64 @@ Os olhos dela estavam cheios de lágrimas quando os dois enfim se soltaram.Allie
 
 <p class="pdest">pag 93
 
-	Não era uma chuva fria, mas Noah podia ver os mamilos dela sobressaindo-se, duros como pequenas pedras.Logo sentiu uma alteração na virilha e se virou depressa, envergonhado,xingando-se baixinho e feliz por a chuva abafar sua voz.Quando terminou e se levantou,Allie pegou a mão dele, surpreendendo-o Apesar </p>
+	Não era uma chuva fria, mas Noah podia ver os mamilos dela sobressaindo-se, duros como pequenas pedras.Logo sentiu uma alteração na virilha e se virou depressa, envergonhado,xingando-se baixinho e feliz por a chuva abafar sua voz.Quando terminou e se levantou,Allie pegou a mão dele, surpreendendo-o Apesar da tempestade, não saíram correndo para a casa, e Noah imaginou como seria passar a noite com ela.
+	Allie também não parava de pensar nele.Sentia o calor das mãos de Noah e se perguntava como seria tê-las tocando seu corpo, sentido-a por inteiro,demorando-se lentamente em sua pele.
+</p>
+
+<p>pag 102
+
+	Allie se lembrou de quando haviam se abraçado assim ao acharem que seria a última vez.Estavam sentados em um quebra-cabeça projetado para segurar as águas do rio Neuse.Ela estava chorando por que talvez ela nunca mais se vissem e se perguntando como poderia voltar a ser feliz.Em vez de responder, Noah colocará um bilhete em sua mão, que ela lerá a caminho de casa.Allie o guardará, ocasionalmente lendo tudo ou as vezes só um pedaço.Uma parte ela já lerá pelo menos cem vezes e, por alguma razão, ela surgiu em sua cabeça naquele instante.Dizia assim:</p>
+	<p class="pdest"> Essa separação dói tanto porque nossas almas estão conectadas.Talvez sempre tenham estado e sempre vão estar.Talves tenhamos vivido mil vidas antes desta e, em cada uma delas, nós nos encontramos.E talvez todas as vezes tenhamos sido afastados pelos mesmo motivos.Isso significa que este adeus e tanto uma despedida dos últimos dez mil anos quanto um prelúdio do que vira.
+		Quando olho para você, vejo sua graça e beleza e sei que só aumentaram a cada vida que você teve.E sei que passei todas as vidas antes desta procurando por você.Não alguém como você,mas você, pois uma razão que nenhuma de nós compreende, somos obrigados a dizer adeus.
+	   Adoraria lhe garantir que vai dar tudo certo para nós, e prometo fazer tudo o que puder para isso.Mas, se nunca mais nos encontrarmos e este for mesmo o adeus, sei que nos veremos novamente em outra vida.Vamos nos encontrar de novo e, talve, as estrelas tenham mudado, e não só nos amameremos dessa vez, mas por todas as vezes que passaram antes 
+
+</p>
+<p class="pdest">pag 106
+
+	Ele levou o dedo aos lábios dela, suavemente, para não deixa-los falar, e por um longo tempo ficaram apenas se olhando .Quando o no em sua garganta se desfez, Noah sussurrou:
+	-Voce e a resposta para cada oração que fiz.Voce é uma canção, um sonho, um sussurro, e não sei como pude viver sem você esse tempo todo.Eu amo voce,Allie, mais do que possa imaginar.Sempre amei e sempre vou amar.
+	
+	</p>
+<p> pag 117
+
+	-Não.
+	-Não precisa ser assim,Allie - disse Noah. - Somos adultos agora, temos o poder de escolha que não tinhamos antes.Nosso destino e ficarmos juntos.Sempre foi.
+	  Ele caminhou até ela é colocou a mão em seu ombro.
+	  -Não quero passar o resto da minha vida pensando em você e sonhando com o que poderia ter acontecido.Fique comigo,Allie.
+   Os olhos dela começaram a ficar marejados.
+-Não sei se posso - sussurrou Allie por fim.
+-Voce pode.Allie...Não posso ser feliz sabendo que você está com outra pessoa.Isso mataria uma parte de mim.O que temos é raro.E muito bonito para simplismente jogar fora.
+
+	</p>
+<p>123
+
+	Minha querida Allie,
+   Não sei mas o que dizer, exceto que não consegui dormir ontem a noite, porque percebi que estava tudo acabado entre nós.E um sentimento diferente para mim, um que eu nunca esperava saber como é,mas, parando para pensar, imagino que não poderia ter terminado de outro jeito.
+	  Você e eu éramos diferentes.Viemos de mundos diferentes,e, aí da assim, foi você que me ensinou o valor do amor. Você me mostrou como era se importar com alguém, e sou homem melhor por sua causa disso.Não quero que se esqueça disso nunca.
+	  Não fiquei amargo pelo que aconteceu.Pelo contrário.Sintome tranquilo por saber que o que tivemos foi real e feliz por termos ficado juntos, ainda que tenha sido por curto período.
+	  E se, em algum lugar distante do futuro, voltarmos a nos ver em nossas vidas,irei sorrir para você com alegria e me lembrarei do verão que passamos juntos sob  as árvores, aprendendo um com outro e nos amando cada vez mais.E talvez, por um breve instante, você possa sentir isso também é vá sorrir de volta, e saborear as lembranças que sempre compartilhamos.
+	  Eu amo voce,Allie.
+	 Noah.
+  </p>
+  <p>142
+
+	Amo você,Allie.Sou quem sou por sua causa. Você e toda a razão, toda a esperança e todo o sonho que já tive, e , independentemente do que aconteça conosco no futuro, cada dia que passamos juntos e o melhor dia da minha vida.Serei sempre seu.
+	E você, minha querida, sempre será minha.
+	Noah.
+  </p>
+  <p>144
+
+	-Ela era meu sonho.Ela fez de mim quem eu sou, e tela em meus braços era mais natural que as batidas do meu coração.Penso nela o tempo todo.Mesmo agora, sentado aqui, penso nela.Nunca poderia haver outra. 
+	   Ela absorve o que falei.Não sei como se sente com relação a isso.Por fim, fala suavemente, a voz angelical, sensual.Pergunto me se ela sabe que penso essas coisas 
+ </p>
+ <p>161
+
+	A preocupação dos médico estava estampada em seus rostos quando estreitava os olhos, avaliando os prontuário e ajustando as máquinas.Sussurravam o que lhes passava na cabeça.pensando que eu não podia ouvi-los.”Derrames podem ser perigosos”.dizem, “principalmente para alguem na idade dele, e as consequências pode ser graves,” Rostos fechados anunciavam suas previsões: “Perda da fala, perda do movimento,paralisia.”Outra avaliação de prontuário, outro bipe de uma máquina estranha, e eles saiam, sem saber que eu tinha ouvido cada palavra.
+	Tentava não ficar pensando nessas coisas e me concentrar em Allie, trazendo a imagem dela a minha mente sempre que conseguia.Eu me esforçava ao maximo para trazer a vida dela para a minha, para sermos um só outra vez.Buscava sentir seu toque, ouvir sua voz,ver seu rosto e,quando eu conseguia,ficava cheio de lágrimas nos olhos,porque não sabia se poderia abraçá-la novamente,sussurrar para ela,passar o dia ao seu lado conversando,lendo e caminhando.
+</p>
+<p>164 a 167 a  carta para allie
+</p>
+
 
 </div>
 
