--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
    <div class="descricao"> 
 
-    <h1>Diário de uma paixão - Melhores partes da minha leitura</h1>
+    <h1>Diário de uma paixão</h1>
 
   <div class="foto">
     <img class="imagem" src="static/imagem/omelhordemim.jpg" alt="">
